# el-ltp-tools

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: tests.yml
el_ltp_tools/combine/: combine_gui.py  combine_script.py  process.py
el_ltp_tools/combine_images/: combine_images_gui.py
el_ltp_tools/diffraction/: __init__.py  gui.py  integrate_multi_gui.py  script.py
el_ltp_tools/image_combine/: __init__.py  gui.py  script.py
el_ltp_tools/image_combine/tests/: test_image_combine.py
el_ltp_tools/integrate/: integrate_data.py
el_ltp_tools/util/: cosmic.py
examples/: combine_images_example.sh  diffraction_integration.sh
scripts/: combine_images.py  integrate_multi.py  remove_cosmic.py
scripts/examples/: combine_images_example.sh  cosmic_ray_removal.sh
src/: combine_casio3.sh  combine_data.py  combine_data_gui.py  cosmic.py
tests/: conftest.py
tests/diffraction/: test_diffraction.py  test_gui.py  test_integrate_multi_gui.py
tests/image_combine/: __init__.py  test_combine_images.py  test_combine_images_gui.py  test_image_combine_gui.py
