[project]
name = "el-ltp-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Clemens Prescher",email = "clemens.prescher@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fabio (>=2024.9.0,<2025.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)"
]

[tool.poetry.scripts]
combine-gui = "el_ltp_tools.combine.combine_gui:main"

[tool.poetry]
packages = [
    { include = "el_ltp_tools" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
