[project]
name = "el-ltp-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Clemens Prescher",email = "clemens.prescher@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fabio (>=2024.9.0,<2025.0.0)",
    "numpy (>=1.24.0,<2.0.0); python_version < '3.11'",
    "numpy (>=2.3.0,<3.0.0); python_version >= '3.11'",
    "scipy (>=1.11.0,<2.0.0); python_version < '3.10'",
    "scipy (>=1.15.3,<2.0.0); python_version >= '3.10'",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyfai (>=2025.3.0,<2026.0.0)",
    "matplotlib (>=3.7.0,<4.0.0); python_version < '3.10'",
    "matplotlib (>=3.10.3,<4.0.0); python_version >= '3.10'"
]

[tool.poetry.scripts]
el-ltp-remove-cosmic = "scripts.remove_cosmic:main"
el-ltp-combine-images = "scripts.combine_images:main"
el-ltp-integrate-multi = "scripts.integrate_multi:main"
el-ltp-combine-images-gui = "el_ltp_tools.image_combine.combine_images_gui:main"
el-ltp-integrate-multi-gui = "el_ltp_tools.diffraction.integrate_multi_gui:main"

[tool.poetry]
packages = [
    { include = "el_ltp_tools" },
    { include = "scripts" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-qt = "^4.4.0"
pillow = "^10.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=el_ltp_tools"
